--- a/src/app/create-eval/create-eval.component.html
+++ b/src/app/create-eval/create-eval.component.html
@@ -2,42 +2,44 @@
   <form class="createEvalForm" [formGroup]="createEvalForm" (ngSubmit)="onSubmit()" #crEvalForm="ngForm">
 
     <mat-form-field class="schoolInput">
-      <input matInput placeholder="Ecole" id="school" [(ngModel)]="eval.school" name="school">
+      <input matInput placeholder="Ecole" formControlName="school" id="school" name="school" required>
     </mat-form-field>
 
     <mat-form-field class="moduleInput">
-      <input matInput placeholder="Module" id="module" [(ngModel)]="eval.module" name="module">
+      <input matInput placeholder="Module" formControlName="module" id="module" name="module" required>
     </mat-form-field>
 
     <mat-form-field class="promotionInput">
-      <input matInput placeholder="Promotion" id="promotion" [(ngModel)]="eval.promotion" name="promotion">
+      <input matInput placeholder="Promotion" formControlName="promotion" id="promotion" name="promotion" required>
     </mat-form-field>
 
     <mat-form-field class="categoryInput">
-      <input matInput placeholder="Categorie" id="category" [(ngModel)]="eval.category" name="category">
+      <input matInput placeholder="Categorie" formControlName="category" id="category" name="category" required>
     </mat-form-field>
 
     <mat-form-field class="skillInput">
-      <input matInput placeholder="Skill ?" id="skill" [(ngModel)]="eval.skill" name="skill">
+      <input matInput placeholder="Skill ?" formControlName="skill" id="skill" name="skill" required>
     </mat-form-field>
 
     <mat-form-field class="homeworkInput">
-      <input matInput placeholder="Devoir" id="homework" [(ngModel)]="eval.homework" name="homework">
+      <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework" required>
     </mat-form-field>
 
     <mat-form-field class="studentInput">
-      <input matInput placeholder="Nom de l'étudiant" id="student" [(ngModel)]="eval.student" name="student">
+      <input matInput placeholder="Nom de l'étudiant" formControlName="student" id="student" name="student" required>
     </mat-form-field>
 
     <mat-form-field class="scoreInput">
-      <input matInput placeholder="Score" id="score" [(ngModel)]="eval.score" name="score">
+      <input matInput placeholder="Score" formControlName="score" id="score" name="score" required pattern="^[0-9][0-9]?[0-9]?$">
     </mat-form-field>
 
     <mat-form-field class="obtainableInput">
-      <input matInput placeholder="Nombre de points" id="obtainable" [(ngModel)]="eval.obtainable" name="obtainable">
+      <input matInput placeholder="Nombre de points" formControlName="obtainable" id="obtainable" name="obtainable" required pattern="^[0-9][0-9]?[0-9]?$">
     </mat-form-field>
 
-    <button mat-raised-button type="submit" color="primary">Valider</button>
+    <button mat-raised-button class="float-right" type="submit" color="primary" 
+      [disabled]="createEvalForm.pristine || createEvalForm.invalid">Valider
+    </button>
   </form>
 
 </div>
