--- a/src/app/search-eval/search-eval.component.html
+++ b/src/app/search-eval/search-eval.component.html
@@ -7,7 +7,7 @@
     <mat-form-field class="searchInput">
       <input matInput placeholder="Valeur" [formControl]="data">
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="searchEval()">Valider</button> 
+    <button mat-raised-button class="submitBtn" color="primary" (click)="searchEval()">Valider</button>
   </form>
 
   <mat-form-field class="tableFilterInput">
@@ -68,6 +68,16 @@
     <ng-container matColumnDef="obtainable">
       <th mat-header-cell *matHeaderCellDef> Obtainable </th>
       <td mat-cell *matCellDef="let eval"> {{eval.obtainable}} </td>
+    </ng-container>
+
+    <!--Eval details/student-->
+    <ng-container matColumnDef="studentEvalDetails">
+      <th mat-header-cell *matHeaderCellDef> Details </th>
+      <td mat-cell *matCellDef="let eval">
+        <button mat-button>
+          <mat-icon class="toolbarIcon" (click)="editEval(eval.id)">edit</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
