--- a/src/app/search-eval/search-eval.component.html
+++ b/src/app/search-eval/search-eval.component.html
@@ -70,12 +70,22 @@
       <td mat-cell *matCellDef="let eval"> {{eval.obtainable}} </td>
     </ng-container>
 
-    <!--Eval details/student-->
-    <ng-container matColumnDef="studentEvalDetails">
-      <th mat-header-cell *matHeaderCellDef> Details </th>
+    <!--Edit eval btn-->
+    <ng-container matColumnDef="editEval">
+      <th mat-header-cell *matHeaderCellDef> Editer </th>
       <td mat-cell *matCellDef="let eval">
         <button mat-button>
-          <mat-icon class="toolbarIcon" (click)="editEval(eval.id)">edit</mat-icon>
+          <mat-icon class="toolbarIcon" (click)="editEval(eval.evalId)">edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!--Delete eval btn-->
+    <ng-container matColumnDef="deleteEval">
+      <th mat-header-cell *matHeaderCellDef> Supprimer </th>
+      <td mat-cell *matCellDef="let eval">
+        <button mat-button>
+          <mat-icon class="toolbarIcon">delete</mat-icon> <!--(click)="editEval(eval.evalId)"-->
         </button>
       </td>
     </ng-container>
