#6 Display basic graphics

--- a/src/app/search-eval/search-eval.component.css
+++ b/src/app/search-eval/search-eval.component.css
@@ -33,3 +33,17 @@ table {
 .mat-cell {
     text-align: center;
 }
+
+.mat-raised-button {
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+}
+
+.actionIcon {
+    color: #000000;
+}
+
+.graphContainer {
+    margin-top: 8vh;
+    height: 60vh;
+}
