--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackBarSuccess {
+    background-color: green;
+}
+
+.snackBarError {
+    background-color: red;
+}
