Eval based on and score validator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
     <mat-toolbar-row>
         <span>TalentRate</span>
         <span class="spacer"></span>
-        <button mat-raised-button class="toolbarBtn" color="primary" routerLink="/search">
+        <button mat-raised-button class="toolbarBtn" color="primary" routerLink="/search" matTooltip="Rechercher evaluation">
             <mat-icon class="toolbarIcon">search</mat-icon>
         </button>
-        <button mat-raised-button class="toolbarBtn" color="primary" routerLink="/create">
+        <button mat-raised-button class="toolbarBtn" color="primary" routerLink="/create" matTooltip="Créer evaluation">
             <mat-icon class="toolbarIcon">add</mat-icon>
         </button>
     </mat-toolbar-row>
