--- a/src/app/update-eval/update-eval.component.html
+++ b/src/app/update-eval/update-eval.component.html
@@ -25,6 +25,11 @@
       <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework" required>
     </mat-form-field>
 
+    <mat-form-field class="obtainableInput">
+      <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable" required
+        pattern="^[0-9][0-9]?[0-9]?$">
+    </mat-form-field>
+
     <mat-form-field class="studentInput">
       <input matInput placeholder="Nom de l'étudiant" formControlName="student" id="student" name="student" required>
     </mat-form-field>
@@ -34,14 +39,8 @@
         pattern="^[0-9][0-9]?[0-9]?$">
     </mat-form-field>
 
-    <mat-form-field class="obtainableInput">
-      <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable"
-        required pattern="^[0-9][0-9]?[0-9]?$">
-    </mat-form-field>
-
     <button mat-raised-button class="float-right" type="submit" color="warn"
-    [disabled]="updateEvalForm.pristine || updateEvalForm.invalid">Modifier
+      [disabled]="updateEvalForm.pristine || updateEvalForm.invalid">Modifier
     </button>
   </form>
 </div>
-
