#7 First version without date picker. Bug fix on score validators

--- a/src/app/create-eval-based-on/create-eval-based-on.component.html
+++ b/src/app/create-eval-based-on/create-eval-based-on.component.html
@@ -25,6 +25,10 @@
         <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework" required>
       </mat-form-field>
 
+      <mat-form-field class="givenInput">
+        <input matInput placeholder="Date" formControlName="given" id="given" name="given" required>
+      </mat-form-field>
+
       <mat-form-field class="obtainableInput">
         <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable"
           required pattern="^[0-9][0-9]?[0-9]?$">
