#7 given input done #10 loader, error message on filter, copy eval enhanced

--- a/src/app/create-eval/create-eval.component.css
+++ b/src/app/create-eval/create-eval.component.css
@@ -8,6 +8,12 @@
     width: 40%;
 }
 
-.submitBtn {
-    align-self: flex-end;
+.btnContainer {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 2vh;
+}
+
+.copyEvalBtn {
+    margin-right: 4vw;
 }
