--- a/src/app/search-eval/search-eval.component.html
+++ b/src/app/search-eval/search-eval.component.html
@@ -10,7 +10,7 @@
     <button mat-raised-button class="submitBtn" color="primary" (click)="searchEval()" matTooltip="Valider critères de recherche">
       Valider
     </button>
-    <button mat-raised-button class="submitBtn" color="primary" (click)="removeFilters()" matTooltip="Retirer tout les filtres">
+    <button mat-raised-button class="submitBtn" color="accent" (click)="removeFilters()" matTooltip="Retirer tout les filtres">
       Retirer filtres
     </button>
   </form>
