--- a/src/app/create-eval-based-on/create-eval-based-on.component.html
+++ b/src/app/create-eval-based-on/create-eval-based-on.component.html
@@ -26,7 +26,9 @@
       </mat-form-field>
 
       <mat-form-field class="givenInput">
-        <input matInput placeholder="Date" formControlName="given" id="given" name="given" required>
+        <input matInput [owlDateTime]="dt2" formControlName="given" placeholder="Date Time">
+        <span [owlDateTimeTrigger]="dt2" matSuffixb><mat-icon >calendar_today</mat-icon></span>
+        <owl-date-time #dt2></owl-date-time>
       </mat-form-field>
 
       <mat-form-field class="obtainableInput">
