Update packages. Copy eval from create eval component fixed

--- a/src/app/create-eval-based-on/create-eval-based-on.component.html
+++ b/src/app/create-eval-based-on/create-eval-based-on.component.html
@@ -27,7 +27,7 @@
 
       <mat-form-field class="givenInput">
         <input matInput [owlDateTime]="dt2" formControlName="given" placeholder="Date Time">
-        <span [owlDateTimeTrigger]="dt2" matSuffixb><mat-icon >calendar_today</mat-icon></span>
+        <span [owlDateTimeTrigger]="dt2" matSuffix><mat-icon >calendar_today</mat-icon></span>
         <owl-date-time #dt2></owl-date-time>
       </mat-form-field>
 
