--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="mat-elevation-z6" color="primary">
     <mat-toolbar-row>
-        <span>TalentRate</span>
+        <span class="logo" routerLink="/search">TalentRate</span>
         <span class="spacer"></span>
         <button mat-raised-button class="toolbarBtn" color="primary" routerLink="/search" matTooltip="Rechercher evaluation">
             <mat-icon class="toolbarIcon">search</mat-icon>
