--- a/src/app/create-eval-based-on/create-eval-based-on.component.html
+++ b/src/app/create-eval-based-on/create-eval-based-on.component.html
@@ -2,27 +2,27 @@
     <form class="createEvalForm" [formGroup]="createEvalForm" (ngSubmit)="onSubmit()" #upEvalForm="ngForm">
   
       <mat-form-field class="schoolInput">
-        <input matInput placeholder="Ecole" formControlName="school" id="school" name="school" required>
+        <input matInput placeholder="Ecole" formControlName="school" id="school" name="school">
       </mat-form-field>
   
       <mat-form-field class="promotionInput">
-        <input matInput placeholder="Promotion" formControlName="promotion" id="promotion" name="promotion" required>
+        <input matInput placeholder="Promotion" formControlName="promotion" id="promotion" name="promotion">
       </mat-form-field>
   
       <mat-form-field class="moduleInput">
-        <input matInput placeholder="Module" formControlName="module" id="module" name="module" required>
+        <input matInput placeholder="Module" formControlName="module" id="module" name="module">
       </mat-form-field>
   
       <mat-form-field class="categoryInput">
-        <input matInput placeholder="Categorie" formControlName="category" id="category" name="category" required>
+        <input matInput placeholder="Categorie" formControlName="category" id="category" name="category">
       </mat-form-field>
   
       <mat-form-field class="skillInput">
-        <input matInput placeholder="Compétence" formControlName="skill" id="skill" name="skill" required>
+        <input matInput placeholder="Compétence" formControlName="skill" id="skill" name="skill">
       </mat-form-field>
   
       <mat-form-field class="homeworkInput">
-        <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework" required>
+        <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework">
       </mat-form-field>
 
       <mat-form-field class="givenInput">
@@ -37,11 +37,11 @@
       </mat-form-field>
   
       <mat-form-field class="studentInput">
-        <input matInput placeholder="Nom de l'étudiant" formControlName="student" id="student" name="student" required>
+        <input matInput placeholder="Nom de l'étudiant" formControlName="student" id="student" name="student">
       </mat-form-field>
   
       <mat-form-field class="scoreInput">
-        <input matInput placeholder="Score" formControlName="score" id="score" name="score" required
+        <input matInput placeholder="Score" formControlName="score" id="score" name="score"
           pattern="^[0-9][0-9]?[0-9]?$">
       </mat-form-field>
 
