Removed pattern validators from HTML for all forms

--- a/src/app/create-eval-based-on/create-eval-based-on.component.html
+++ b/src/app/create-eval-based-on/create-eval-based-on.component.html
@@ -32,8 +32,7 @@
       </mat-form-field>
 
       <mat-form-field class="obtainableInput">
-        <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable"
-          required pattern="^[0-9][0-9]?[0-9]?$">
+        <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable">
       </mat-form-field>
   
       <mat-form-field class="studentInput">
@@ -41,8 +40,7 @@
       </mat-form-field>
   
       <mat-form-field class="scoreInput">
-        <input matInput placeholder="Score" formControlName="score" id="score" name="score"
-          pattern="^[0-9][0-9]?[0-9]?$">
+        <input matInput placeholder="Score" formControlName="score" id="score" name="score">
       </mat-form-field>
 
       <button mat-raised-button class="float-right" type="submit" color="primary"
