--- a/src/app/create-eval/create-eval.component.html
+++ b/src/app/create-eval/create-eval.component.html
@@ -41,8 +41,7 @@
     </mat-form-field>
 
     <mat-form-field class="scoreInput">
-      <input matInput placeholder="Score" formControlName="score" id="score" name="score" required
-        pattern="^[0-9][0-9]?[0-9]?$">
+      <input matInput placeholder="Score" formControlName="score" id="score" name="score">
     </mat-form-field>
 
     <div class="btnContainer">
