--- a/src/app/create-eval/create-eval.component.html
+++ b/src/app/create-eval/create-eval.component.html
@@ -2,27 +2,46 @@
   <form class="createEvalForm" [formGroup]="createEvalForm" (ngSubmit)="onSubmit()" #crEvalForm="ngForm">
 
     <mat-form-field class="schoolInput">
-      <input matInput placeholder="Ecole" formControlName="school" id="school" name="school">
+      <input matInput placeholder="Ecole" formControlName="school"  id="school" name="school">
+<!--       <mat-error *ngIf="f.school.errors.required">
+        School is required
+      </mat-error> -->
     </mat-form-field>
+    
 
     <mat-form-field class="promotionInput">
       <input matInput placeholder="Promotion" formControlName="promotion" id="promotion" name="promotion">
+<!--       <mat-error *ngIf="f.promotion.errors.required">
+        Promotion is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="moduleInput">
       <input matInput placeholder="Module" formControlName="module" id="module" name="module">
+<!--       <mat-error *ngIf="f.module.errors.required">
+        Module is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="categoryInput">
       <input matInput placeholder="Categorie" formControlName="category" id="category" name="category">
+<!--       <mat-error *ngIf="f.category.errors.required">
+        Category is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="skillInput">
       <input matInput placeholder="Compétence" formControlName="skill" id="skill" name="skill">
+<!--       <mat-error *ngIf="f.skill.errors.required">
+        Skill is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="homeworkInput">
       <input matInput placeholder="Devoir" formControlName="homework" id="homework" name="homework">
+<!--       <mat-error *ngIf="f.homework.errors.required">
+        Homework is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="givenInput">
@@ -34,14 +53,23 @@
     <mat-form-field class="obtainableInput">
       <input matInput placeholder="Score max" formControlName="obtainable" id="obtainable" name="obtainable"
         pattern="^[0-9][0-9]?[0-9]?$">
+<!--         <mat-error *ngIf="f.obtainable.errors.required">
+          Obtainable is required and number only
+        </mat-error> -->
     </mat-form-field>
-
+    
     <mat-form-field class="studentInput">
       <input matInput placeholder="Nom de l'étudiant" formControlName="student" id="student" name="student">
+<!--       <mat-error *ngIf="f.student.errors.required">
+        Student is required
+      </mat-error> -->
     </mat-form-field>
 
     <mat-form-field class="scoreInput">
       <input matInput placeholder="Score" formControlName="score" id="score" name="score">
+<!--       <mat-error *ngIf="f.score.errors.required">
+        Score is required
+      </mat-error> -->
     </mat-form-field>
 
     <div class="btnContainer">
